Fixed issue #909.