@@ -21,8 +21,9 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE. */
 package org.lwjgl.opengl.swt;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.SWTException;
 import org.eclipse.swt.widgets.Canvas;
 import org.eclipse.swt.widgets.Composite;
 import org.lwjgl.system.Platform;
@@ -59,12 +60,10 @@ public class GLCanvas extends Canvas {
         try {
             @SuppressWarnings("unchecked")
             Class<? extends PlatformGLCanvas> clazz = (Class<? extends PlatformGLCanvas>) GLCanvas.class.getClassLoader().loadClass(platformClassName);
-            platformCanvas = clazz.newInstance();
+            platformCanvas = clazz.getDeclaredConstructor().newInstance();
         } catch (ClassNotFoundException e) {
             throw new AssertionError("Platform-specific GLCanvas class not found: " + platformClassName); //$NON-NLS-1$
-        } catch (InstantiationException e) {
-            throw new AssertionError("Could not instantiate platform-specific GLCanvas class: " + platformClassName); //$NON-NLS-1$
-        } catch (IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             throw new AssertionError("Could not instantiate platform-specific GLCanvas class: " + platformClassName); //$NON-NLS-1$
         }
     }
